[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/resources/CanvasLayerColorBack.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Resources/Header 1.tres" type="Theme" id=2]
[ext_resource path="res://src/Resources/Normal Font.tres" type="Theme" id=3]
[ext_resource path="res://src/Scenes/GridContainer.gd" type="Script" id=4]
[ext_resource path="res://src/UI/PlayerButtons.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Scenes/LocalStartup.gd" type="Script" id=6]
[ext_resource path="res://src/Scenes/OptionButton.gd" type="Script" id=7]

[node name="LocalStartup" type="Node"]
script = ExtResource( 6 )

[node name="CanvasLayer" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.5
margin_top = -80.5
margin_right = 251.5
margin_bottom = 80.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 496.0
margin_bottom = 260.0

[node name="HSplitContainer" type="HSplitContainer" parent="Control/PanelContainer/VBoxContainer"]
margin_right = 489.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer/HSplitContainer"]
margin_right = 457.0
margin_bottom = 31.0
theme = ExtResource( 2 )
text = "Start a game with friends on one machine!"
align = 1

[node name="ReturnButton" type="Button" parent="Control/PanelContainer/VBoxContainer/HSplitContainer"]
margin_left = 469.0
margin_right = 489.0
margin_bottom = 31.0
text = "X"

[node name="Label2" type="Label" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 489.0
margin_bottom = 56.0
theme = ExtResource( 3 )
text = "Need controllers or have everyone use keyboard!"

[node name="HSplitContainer2" type="HBoxContainer" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 489.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer/HSplitContainer2"]
margin_right = 60.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Players:"

[node name="PlayerNum" type="Label" parent="Control/PanelContainer/VBoxContainer/HSplitContainer2"]
margin_left = 64.0
margin_right = 73.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/HSplitContainer2"]
margin_left = 77.0
margin_right = 87.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer/HSplitContainer2/MarginContainer"]
margin_top = 3.0
margin_right = 10.0
margin_bottom = 17.0
text = "*"
align = 1

[node name="Label2" type="Label" parent="Control/PanelContainer/VBoxContainer/HSplitContainer2"]
margin_left = 91.0
margin_right = 175.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Controllers:"

[node name="ControllersNum" type="Label" parent="Control/PanelContainer/VBoxContainer/HSplitContainer2"]
margin_left = 179.0
margin_right = 188.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "0"

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 489.0
margin_bottom = 181.0
size_flags_vertical = 3
columns = 2
script = ExtResource( 4 )
playerButtons = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_right = 196.0
margin_bottom = 21.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p1Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press E or X on Controller 1!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_right = 402.0
margin_bottom = 21.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer2"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p2Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer2/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press / or X on Controller 2!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 25.0
margin_right = 196.0
margin_bottom = 46.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer3"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p3Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer3/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press 9 or X on Controller 3!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 25.0
margin_right = 402.0
margin_bottom = 46.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer4"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p4Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer4/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press O or X on Controller 4!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 50.0
margin_right = 196.0
margin_bottom = 71.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer5"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p5Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer5/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 5!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 50.0
margin_right = 402.0
margin_bottom = 71.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer6"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p6Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer6/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 6!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer7" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 75.0
margin_right = 196.0
margin_bottom = 96.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer7"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p7Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer7/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 7!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer8" type="MarginContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 75.0
margin_right = 402.0
margin_bottom = 96.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer8"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p8Label" type="Label" parent="Control/PanelContainer/VBoxContainer/GridContainer/MarginContainer8/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 8!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer3" type="HSplitContainer" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 489.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer/HSplitContainer3"]
margin_top = 3.0
margin_right = 108.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Session Length:"

[node name="OptionButton" type="OptionButton" parent="Control/PanelContainer/VBoxContainer/HSplitContainer3"]
margin_left = 120.0
margin_right = 489.0
margin_bottom = 27.0
theme = ExtResource( 3 )
script = ExtResource( 7 )

[node name="StartButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 489.0
margin_bottom = 253.0
theme = ExtResource( 2 )
disabled = true
text = "Start"

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/HSplitContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="item_selected" from="Control/PanelContainer/VBoxContainer/HSplitContainer3/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
